--- a/index.html
+++ b/index.html
@@ -1,39 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <script src="./lib/keymaster.js"></script>
-    <script src="./lib/utils.js"></script>
-    <script src="./lib/movingObject.js"></script>
-    <script src="./lib/asteroid.js"></script>
-    <script src="./lib/ship.js"></script>
-    <script src="./lib/bullet.js"></script>
-    <script src="./lib/game.js"></script>
-    <script src="./lib/gameView.js"></script>
-    <style>
-      canvas {
-        display: block;
-        margin-left:auto;
-        margin-right:auto;
-      }
-      div{
-        text-align:center;
-      }
-    </style>
-  </head>
-  <body>
-    <canvas width="700" height="700" id="canvas"></canvas>
-    <div> WASD to move around, space to shoot </div>
-    <script>
-      var canvas = document.getElementById("canvas");
-      var context = canvas.getContext('2d');
-      var game = new Asteroids.Game();
-      var gameview = new Asteroids.GameView(game, context);
-      var img = new Image();
-      img.onload = function () {
-        context.drawImage(img,0,0, 1000, 850);
-      };
-      img.src = './lib/myImage.png';
-      gameview.start();
-    </script>
-  </body>
-</html>
+Hello, I'm Auster
